--- a/EarthNews/View/Base.lproj/Main.storyboard
+++ b/EarthNews/View/Base.lproj/Main.storyboard
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MwC-RS-6Fv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Xsm-5F-JfM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Live Article View Controller-->
+        <!--Latest Article View Controller-->
         <scene sceneID="kW4-Rb-ZRD">
             <objects>
-                <viewController id="Tcw-f5-HnE" customClass="LiveArticleViewController" customModule="EarthNews" sceneMemberID="viewController">
+                <viewController id="Tcw-f5-HnE" customClass="LatestArticleViewController" customModule="EarthNews" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zud-gR-rpZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,13 +23,39 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e5v-BR-YSt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2005.7971014492755" y="-7.3660714285714279"/>
+            <point key="canvasLocation" x="2915.9420289855075" y="-7.3660714285714279"/>
         </scene>
-        <!--Item-->
+        <!--Archive Article View Controller-->
+        <scene sceneID="4u7-GS-gRO">
+            <objects>
+                <viewController id="oDb-T8-7JU" customClass="ArchiveArticleViewController" customModule="EarthNews" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zQ2-pi-Pk0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="jIw-Mj-Ekj"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="aNl-DA-Lhk"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9MZ-vn-o1l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2915.9420289855075" y="677.67857142857144"/>
+        </scene>
+        <!--Navigation Controller-->
         <scene sceneID="tXV-qN-FHD">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Rcm-hu-Uw8" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="IK6-97-yE5"/>
+                <navigationController storyboardIdentifier="LiveNavController" automaticallyAdjustsScrollViewInsets="NO" id="Rcm-hu-Uw8" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" id="IK6-97-yE5">
+                        <imageReference key="image" image="network" catalog="system" symbolScale="large"/>
+                        <color key="badgeColor" red="0.1529411765" green="0.40000000000000002" blue="0.47058823529999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <imageReference key="selectedImage" image="network" catalog="system" symbolScale="large" renderingMode="hierarchical">
+                            <hierarchicalColors>
+                                <color red="0.1116537973" green="0.26238411659999999" blue="0.28235718609999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color red="0.15686274510000001" green="0.32156862749999998" blue="0.47843137250000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color red="0.1529411765" green="0.40000000000000002" blue="0.47058823529999999" alpha="1" colorSpace="calibratedRGB"/>
+                            </hierarchicalColors>
+                        </imageReference>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="jcd-Hz-gaB">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -41,27 +68,65 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dPC-jR-CUb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1095.6521739130435" y="-7.3660714285714279"/>
+            <point key="canvasLocation" x="2005.7971014492755" y="-7.3660714285714279"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="FMb-Fo-ICt">
+            <objects>
+                <navigationController storyboardIdentifier="ArchiveNavController" automaticallyAdjustsScrollViewInsets="NO" id="3zG-d7-XgA" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" id="9XF-wS-If2">
+                        <imageReference key="image" image="bookmark.circle" catalog="system" symbolScale="large" renderingMode="hierarchical">
+                            <hierarchicalColors>
+                                <color red="0.1529411765" green="0.40000000000000002" blue="0.47058823529999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color red="0.48627450979999998" green="0.58039215690000001" blue="0.45098039220000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <color red="0.14117647059999999" green="0.28627450980000002" blue="0.36862745099999999" alpha="1" colorSpace="calibratedRGB"/>
+                            </hierarchicalColors>
+                        </imageReference>
+                        <color key="badgeColor" red="0.48627450979999998" green="0.58039215690000001" blue="0.45098039220000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <imageReference key="selectedImage" image="bookmark.circle" catalog="system" symbolScale="large" renderingMode="hierarchical">
+                            <hierarchicalColors>
+                                <color red="0.1529411765" green="0.40000000000000002" blue="0.47058823529999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color red="0.48627450979999998" green="0.58039215690000001" blue="0.45098039220000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <color red="0.14117647059999999" green="0.28627450980000002" blue="0.36862745099999999" alpha="1" colorSpace="calibratedRGB"/>
+                            </hierarchicalColors>
+                        </imageReference>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rni-hU-2As">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oDb-T8-7JU" kind="relationship" relationship="rootViewController" id="DBT-GG-EC3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dr3-i9-Fi2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2005.7971014492755" y="677.67857142857144"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="ZDa-W5-UDC">
+        <scene sceneID="WzE-1N-ff6">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="MwC-RS-6Fv" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Xsm-5F-JfM" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Zi9-jy-6L8">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uuL-KX-DOK">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="Rcm-hu-Uw8" kind="relationship" relationship="viewControllers" id="ilZ-wQ-N1a"/>
+                        <segue destination="Rcm-hu-Uw8" kind="relationship" relationship="viewControllers" id="zjR-ZW-beU"/>
+                        <segue destination="3zG-d7-XgA" kind="relationship" relationship="viewControllers" id="lrB-2g-jpZ"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vFA-tV-MHf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tQE-hs-695" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="185.50724637681162" y="-7.3660714285714279"/>
+            <point key="canvasLocation" x="1095.6521739130435" y="334.82142857142856"/>
         </scene>
     </scenes>
     <resources>
+        <image name="bookmark.circle" catalog="system" width="128" height="121"/>
+        <image name="network" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
