--- a/EarthNews/View/Cell/ArticleTableViewCell.xib
+++ b/EarthNews/View/Cell/ArticleTableViewCell.xib
@@ -10,104 +10,130 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleTableViewCell" rowHeight="273" id="KGk-i7-Jjw" customClass="ArticleTableViewCell" customModule="EarthNews">
-            <rect key="frame" x="0.0" y="0.0" width="631" height="273"/>
+            <rect key="frame" x="0.0" y="0.0" width="399" height="273"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="631" height="273"/>
+                <rect key="frame" x="0.0" y="0.0" width="399" height="273"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="AYE-Ox-5Eo">
-                        <rect key="frame" x="6" y="11" width="246" height="150"/>
+                        <rect key="frame" x="5" y="10" width="300" height="150"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2e2-bh-mo8" userLabel="DatabaseIcon">
-                                <rect key="frame" x="0.0" y="0.0" width="30" height="150"/>
+                                <rect key="frame" x="0.0" y="0.0" width="84" height="150"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vRm-Ut-8jy">
-                                        <rect key="frame" x="0.0" y="23" width="30" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="cJM-F2-Rgg"/>
-                                            <constraint firstAttribute="height" constant="30" id="rbo-oh-RoT"/>
-                                        </constraints>
-                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LtA-69-0ap">
+                                        <rect key="frame" x="8.5" y="0.0" width="67" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ldB-Yp-1oK">
-                                        <rect key="frame" x="0.0" y="53" width="30" height="97"/>
+                                        <rect key="frame" x="17" y="31" width="50" height="119"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="vRm-Ut-8jy" secondAttribute="trailing" constant="1" id="WpL-fu-H8B"/>
-                                    <constraint firstItem="vRm-Ut-8jy" firstAttribute="top" secondItem="2e2-bh-mo8" secondAttribute="top" constant="23" id="o9Z-pP-hsy"/>
-                                    <constraint firstItem="vRm-Ut-8jy" firstAttribute="leading" secondItem="2e2-bh-mo8" secondAttribute="leading" id="p5R-Wc-69J"/>
-                                </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="qsS-JP-Jje" userLabel="Body">
-                                <rect key="frame" x="33" y="0.0" width="60" height="150"/>
+                                <rect key="frame" x="87" y="0.0" width="60" height="150"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" horizontalCompressionResistancePriority="751" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Bn-kr-D9x" userLabel="DateLabel">
                                         <rect key="frame" x="0.0" y="5" width="60" height="12"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="12" id="fwD-aw-UwD"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="999" constant="30" id="y5h-MM-MBO"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="10"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Jib-oJ-mzG" userLabel="TitleLabel">
-                                        <rect key="frame" x="0.0" y="22" width="60" height="19"/>
+                                        <rect key="frame" x="0.0" y="22" width="60" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="999" constant="30" id="5mG-8O-gPO"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="ILf-hb-b43"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hbd-Dv-egq" userLabel="SubtitleLabel">
-                                        <rect key="frame" x="0.0" y="46" width="60" height="82"/>
+                                        <rect key="frame" x="0.0" y="47" width="60" height="14"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="999" constant="30" id="agX-wU-aCn"/>
+                                            <constraint firstAttribute="height" relation="lessThanOrEqual" priority="999" constant="50" id="ccr-oO-PFt"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="source" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmk-Bx-cod" userLabel="SourceLabel">
                                         <rect key="frame" x="0.0" y="133" width="60" height="12"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="12" id="CMj-QZ-1DV"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="999" constant="30" id="tTI-VI-a5G"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="10"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="230" id="MBR-Sa-upw"/>
-                                    <constraint firstItem="Jib-oJ-mzG" firstAttribute="top" secondItem="5Bn-kr-D9x" secondAttribute="bottom" constant="5" id="RgN-tW-9zP"/>
+                                    <constraint firstItem="Jib-oJ-mzG" firstAttribute="top" secondItem="5Bn-kr-D9x" secondAttribute="bottom" constant="5" id="24I-Sj-bmX"/>
+                                    <constraint firstItem="qmk-Bx-cod" firstAttribute="leading" secondItem="qsS-JP-Jje" secondAttribute="leading" id="IG6-ye-X7V"/>
+                                    <constraint firstItem="Hbd-Dv-egq" firstAttribute="leading" secondItem="qsS-JP-Jje" secondAttribute="leading" id="Izf-aE-WYU"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" priority="999" constant="230" id="MBR-Sa-upw"/>
+                                    <constraint firstItem="5Bn-kr-D9x" firstAttribute="leading" secondItem="qsS-JP-Jje" secondAttribute="leading" id="RAh-Pn-3ip"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="bEF-sX-idF"/>
                                     <constraint firstItem="5Bn-kr-D9x" firstAttribute="top" secondItem="qsS-JP-Jje" secondAttribute="top" constant="5" id="eQw-gJ-jiy"/>
                                     <constraint firstItem="Hbd-Dv-egq" firstAttribute="top" secondItem="Jib-oJ-mzG" secondAttribute="bottom" constant="5" id="f4a-hD-EuA"/>
+                                    <constraint firstItem="Jib-oJ-mzG" firstAttribute="leading" secondItem="qsS-JP-Jje" secondAttribute="leading" id="hiC-HX-lz3"/>
                                     <constraint firstItem="qmk-Bx-cod" firstAttribute="top" secondItem="Hbd-Dv-egq" secondAttribute="bottom" constant="5" id="mLY-3z-FTc"/>
                                     <constraint firstAttribute="height" constant="150" id="noC-kd-kzT"/>
+                                    <constraint firstItem="Hbd-Dv-egq" firstAttribute="top" secondItem="Jib-oJ-mzG" secondAttribute="bottom" constant="5" id="pSz-xM-Ysz"/>
                                     <constraint firstAttribute="bottom" secondItem="qmk-Bx-cod" secondAttribute="bottom" constant="5" id="poU-7I-a4w"/>
                                 </constraints>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GA0-zd-Krh">
-                                <rect key="frame" x="96" y="0.0" width="150" height="150"/>
+                                <rect key="frame" x="150" y="0.0" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="GbO-o1-MVp"/>
                                     <constraint firstAttribute="height" constant="150" id="cnP-DH-m92"/>
                                 </constraints>
                             </imageView>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="qsS-JP-Jje" secondAttribute="bottom" id="0iV-WD-d3D"/>
+                            <constraint firstAttribute="height" constant="150" id="45u-5c-i2A"/>
+                            <constraint firstItem="2e2-bh-mo8" firstAttribute="top" secondItem="AYE-Ox-5Eo" secondAttribute="top" id="5LC-sY-z4L"/>
+                            <constraint firstItem="qsS-JP-Jje" firstAttribute="leading" secondItem="2e2-bh-mo8" secondAttribute="trailing" constant="3" id="5MJ-Qf-9Ws"/>
+                            <constraint firstItem="2e2-bh-mo8" firstAttribute="leading" secondItem="AYE-Ox-5Eo" secondAttribute="leading" id="7gw-iA-cSU"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="MPg-pr-UR7"/>
+                            <constraint firstItem="GA0-zd-Krh" firstAttribute="top" secondItem="AYE-Ox-5Eo" secondAttribute="top" id="XWE-Ua-bt0"/>
+                            <constraint firstItem="qsS-JP-Jje" firstAttribute="leading" secondItem="2e2-bh-mo8" secondAttribute="trailing" constant="3" id="o1N-LN-VfW"/>
+                            <constraint firstItem="GA0-zd-Krh" firstAttribute="leading" secondItem="qsS-JP-Jje" secondAttribute="trailing" constant="3" id="rZ6-os-ZKY"/>
+                            <constraint firstAttribute="bottom" secondItem="GA0-zd-Krh" secondAttribute="bottom" id="ra7-r6-JdD"/>
+                            <constraint firstItem="qsS-JP-Jje" firstAttribute="top" secondItem="AYE-Ox-5Eo" secondAttribute="top" id="t4p-TQ-sRY"/>
+                            <constraint firstAttribute="trailing" secondItem="GA0-zd-Krh" secondAttribute="trailing" id="zhY-fZ-vFu"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="AYE-Ox-5Eo" secondAttribute="trailing" constant="6" id="DNq-vH-NQg"/>
-                    <constraint firstItem="AYE-Ox-5Eo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="6" id="NfQ-zk-i32"/>
-                    <constraint firstItem="AYE-Ox-5Eo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="reU-lY-28c"/>
+                    <constraint firstItem="AYE-Ox-5Eo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="3d0-qp-fNu"/>
+                    <constraint firstItem="AYE-Ox-5Eo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="B3N-rL-BJ1"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="cellImageView" destination="GA0-zd-Krh" id="G7R-v9-Uto"/>
-                <outlet property="databseIconImageView" destination="vRm-Ut-8jy" id="rmW-e9-86d"/>
                 <outlet property="date" destination="5Bn-kr-D9x" id="1vh-Fy-znK"/>
                 <outlet property="imageView" destination="GA0-zd-Krh" id="clS-7I-lpG"/>
                 <outlet property="source" destination="qmk-Bx-cod" id="C6m-BS-Zeh"/>
                 <outlet property="subtitle" destination="Hbd-Dv-egq" id="GYF-4I-KjZ"/>
                 <outlet property="title" destination="Jib-oJ-mzG" id="5lp-c5-Bce"/>
             </connections>
-            <point key="canvasLocation" x="-1" y="-7"/>
+            <point key="canvasLocation" x="-170.28985507246378" y="-7.03125"/>
         </tableViewCell>
     </objects>
 </document>
